<resources>
    <string name="app_name">FastMed</string>
    <string name="title_home">Home</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_other">Other</string>
    <string name="show_appointments">Book appointments</string>
    <string name="show_hospitals">All hospitals</string>
    <string name="show_doctors">All doctors</string>
    <string name="my_profile">My profile</string>
    <string name="tech_support">Technical Support</string>
    <string name="social_networks">Social Networks</string>
    <string name="log_out">Log out</string>
    <string name="text_appointments_page">You don’t have any booked appointments</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="list_of_doctors">The list of doctors</string>
    <string name="list_of_hospitals">The list of hospitals</string>
    <string name="result_of_analysis">Result of analysis</string>
    <string name="tech_support_send_message">Your message has been sent!</string>
    <string name="get_started_text">Welcome to FastMed!</string>
    <string name="get_started_btn">Get Started</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="next">Next</string>
    <string name="error">This field is required!</string>
    <string name="register_question">Already have an account?</string>
    <string name="login_question">Don`t have an account?</string>
    <string name="empty"/>
    <string name="loading">loading...</string>
</resources>