<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.other.OtherFragment">
    <LinearLayout
        android:id="@+id/my_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/navigation_btn"
        android:orientation="horizontal"
        android:padding="12dp">
        <ImageView
            android:id="@+id/my_profile_image"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/profile"
            android:contentDescription="@string/my_profile"/>
        <TextView
            android:id="@+id/my_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_networks_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_profile_btn"
        android:background="@drawable/navigation_btn"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginTop="12dp">
        <ImageView
            android:id="@+id/social_networks_image"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/socialnetworks"
            android:contentDescription="@string/social_networks"/>
        <TextView
            android:id="@+id/social_networks_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_networks"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tech_support_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_networks_btn"
        android:background="@drawable/navigation_btn"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginTop="12dp">
        <ImageView
            android:id="@+id/tech_support_image"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/support"
            android:contentDescription="@string/tech_support"/>
        <TextView
            android:id="@+id/tech_support_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech_support"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tech_support_btn"
        android:background="@drawable/navigation_btn"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginTop="12dp">
        <ImageView
            android:id="@+id/logout_image"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/logout"
            android:contentDescription="@string/log_out"/>
        <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>