<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    >

    <LinearLayout
        android:id="@+id/show_appointments_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/navigation_btn"
        android:orientation="horizontal"
        android:padding="12dp">
        <ImageView
            android:id="@+id/show_appointments_image"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/ic_baseline_person_add_alt_1_24"
            android:contentDescription="@string/show_appointments"/>
        <TextView
            android:id="@+id/show_appointments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_appointments"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_list_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_appointments_btn"
        app:layout_constraintStart_toStartOf="@id/show_appointments_btn"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/show_hospitals_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/navigation_btn"
            android:orientation="vertical"
            android:padding="12dp">
            <ImageView
                android:id="@+id/show_hospitals_image"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/hospital"
                android:layout_gravity="center"
                android:contentDescription="@string/show_hospitals"/>
            <TextView
                android:id="@+id/show_hospitals_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_hospitals"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_light"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/show_doctors_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/navigation_btn"
            android:orientation="vertical"
            android:padding="12dp">
            <ImageView
                android:id="@+id/show_doctors_image"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/doctor"
                android:layout_gravity="center"
                android:contentDescription="@string/show_doctors"/>
            <TextView
                android:id="@+id/show_doctors_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_doctors"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_light"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>